# projekt-MergeSort

./: .gitignore  CMakeLists.txt  MergeSorter.h  README.md  main.cpp  run-test.bat  run.bat  test.cpp
